--- a/ux/src/assets/font/font.css
+++ b/ux/src/assets/font/font.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: "helloFont";
-  src: url("helloFont2.ttf") format("truetype");
+  src: url("helloFont.ttf") format("truetype");
 }
